--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
-Doctype/html
-</h1>CV</h1>
-</h2>Personal information</h2>
+Doctype html!
+</p></h1>CV</h1></p>
+</p></h2>Personal information</h2></p>
