--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
-Doctype html!
+
 </p></h1>CV</h1></p>
 </p></h2>Personal information</h2></p>
+</p>NAME;Teinbofa Oprah</p>
+</p>Location;Manchester United Kingdom</p> 
