--- a/index.html
+++ b/index.html
@@ -1,5 +1,119 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Teinbofa Oprah Tarinabo - CV</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 20px;
+            background-color: #f4f4f4;
+        }
+        h1, h2 {
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: 0 auto;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+        .section-title {
+            background-color: #007BFF;
+            color: white;
+            padding: 8px;
+            margin-bottom: 10px;
+            font-size: 1.2em;
+            border-radius: 5px;
+        }
+        .section-content {
+            margin-bottom: 20px;
+        }
+        .skills-list, .interests-list {
+            list-style-type: none;
+            padding-left: 0;
+        }
+        .skills-list li, .interests-list li {
+            margin: 5px 0;
+        }
+        .contact-info p {
+            margin: 5px 0;
+        }
+        .footer {
+            font-size: 0.9em;
+            text-align: center;
+            color: #777;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Teinbofa Oprah Tarinabo</h1>
+        <div class="contact-info">
+            <p><strong>Address:</strong> 118 Wembury Street North, M9 4HY</p>
+            <p><strong>Phone:</strong> 07586391535</p>
+            <p><strong>Email:</strong> oprahteny9@gmail.com</p>
+        </div>
 
-</p></h1>CV</h1></p>
-</p></h2>Personal information</h2></p>
-</p>NAME;Teinbofa Oprah</p>
-</p>Location;Manchester United Kingdom</p> 
+        <div class="section-title">Personal Profile</div>
+        <div class="section-content">
+            <p>I am a Level 3 Computing student at The Manchester College. I am very positive, hardworking, passionate about my course, and enthusiastic. I have a can-do attitude and am always ready to take on tasks. I believe I’ll be a great asset to your company. Though I have not gained a lot of experience, I am a fast learner and capable of taking on any challenge.</p>
+        </div>
+
+        <div class="section-title">Employment and Work Experience</div>
+        <div class="section-content">
+            <p><strong>BCS Charity Organisation (Volunteer)</strong><br>February - May 2023</p>
+        </div>
+
+        <div class="section-title">Skills and Personal Qualities</div>
+        <div class="section-content">
+            <p><strong>Languages:</strong> Python</p>
+            <p><strong>Operating Systems:</strong> Microsoft, Chrome OS, Mac OS, Samsung OS</p>
+            <p><strong>Soft Skills:</strong> Teamwork, Adaptability, Work Ethic, Emotional Intelligence, Communication</p>
+        </div>
+
+        <div class="section-title">Other Skills and Achievements</div>
+        <div class="section-content">
+            <ul class="skills-list">
+                <li>Customer Care</li>
+                <li>Hospitality</li>
+                <li>Can Use a Till</li>
+                <li>Very Nice and Approachable</li>
+                <li>Caring</li>
+            </ul>
+        </div>
+
+        <div class="section-title">Interests</div>
+        <div class="section-content">
+            <ul class="interests-list">
+                <li>Reading Novels</li>
+                <li>Passionate about Programming and Computing</li>
+                <li>Cardio in Free Time</li>
+            </ul>
+        </div>
+
+        <div class="section-title">Education and Qualifications</div>
+        <div class="section-content">
+            <p><strong>High School:</strong> Command Secondary School</p>
+            <p><strong>Qualification:</strong> WAEC (GCSE equivalent, can provide NARIC)</p>
+            <p><strong>Maths:</strong> C, <strong>English:</strong> C, <strong>Physics:</strong> B, <strong>Chemistry:</strong> C, <strong>Geography:</strong> B, <strong>Biology:</strong> B</p>
+            <p><strong>Data Science Course:</strong> DataCamp, April 2023</p>
+            <p><strong>AWS AI Course:</strong> October 2024 (Ongoing)</p>
+            <p><strong>Level 3 Computing Course:</strong> The Manchester College (Ongoing)</p>
+        </div>
+
+        <div class="section-title">Referee</div>
+        <div class="section-content">
+            <p>Available on Request</p>
+        </div>
+
+        <div class="footer">
+            <p>Created by Teinbofa Oprah Tarinabo</p>
+        </div>
+    </div>
+</body>
+</html>
