--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
         <div class="section-title">Skills and Personal Qualities</div>
         <div class="section-content">
-            <p><strong>Languages:</strong> Python</p>
+            <p><strong>Languages:</strong> Python, Html</p>
             <p><strong>Operating Systems:</strong> Microsoft, Chrome OS, Mac OS, Samsung OS</p>
             <p><strong>Soft Skills:</strong> Teamwork, Adaptability, Work Ethic, Emotional Intelligence, Communication</p>
         </div>
