--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="container">
         <h1>Teinbofa Oprah Tarinabo</h1>
         <div class="contact-info">
-            <p><strong>Address:</strong> 118 Wembury Street North, M9 4HY</p>
+            <p><strong>Address:</strong>Manchester,United Kingdom</p>
             <p><strong>Phone:</strong> 07586391535</p>
             <p><strong>Email:</strong> oprahteny9@gmail.com</p>
         </div>
